# platformation

./: .gitmodules  CMakeLists.txt  Platformation.files  Platformation.includes  platformation.files  platformation.includes
GNovaEdit/: GNovaEdit.cbp
codeblocks/: platformation.cbp
deprecated/: spawn_tile_instance_action.cpp  tile_selector.h
platformation/: editor_view.cpp  editor_view.h  geometry_element.cpp  geometry_element.h  layer.cpp  layer.h  layer_manager.cpp  layer_manager.h  layer_rename_dialog.cpp  layer_rename_dialog.h  level.cpp  level.h  main.cpp  main_window.cpp  main_window.h  natural_sort.h  new_level_dialog.cpp  new_level_dialog.h  object.h  opengl_grid.h  opengl_picker.h  opengl_tile_editor.cpp  opengl_tile_editor.h  opengl_tile_selector.cpp  opengl_tile_selector.h  opengl_widget.cpp  opengl_widget.h  tile.cpp  tile.h  tile_instance.cpp  tile_instance.h  tile_selector.cpp  tile_selector.h  tileset.cpp  tileset.h  typedefs.h
platformation/actions/: action.h  layer_lower_action.cpp  layer_lower_action.h  layer_raise_action.cpp  layer_raise_action.h  layer_rename_action.cpp  spawn_tile_instance_action.h
platformation/gtkgl/: gtk_gl_widget.cpp  gtk_gl_widget.h
src/: action_manager.h  clutter_helper.h  editor_view.cpp  editor_view.h  geometry_element.cpp  geometry_element.h  import_export_plugin.h  layer.cpp  layer.h  layer_manager.cpp  layer_manager.h  layer_rename_dialog.h  level.cpp  level.h  main.cpp  main_window.cpp  main_window.h  natural_sort.cpp  natural_sort.h  new_level_dialog.cpp  new_level_dialog.h  object.h  opengl_grid.cpp  opengl_grid.h  opengl_picker.h  opengl_tile_editor.cpp  opengl_tile_editor.h  opengl_tile_selector.cpp  opengl_tile_selector.h  opengl_widget.cpp  opengl_widget.h  tile.cpp  tile.h  tile_instance.cpp  tile_instance.h  tile_selector.cpp  tile_selector.h  tileset.cpp  tileset.h  transparent_colour.h  (+1 more)
src/actions/: action.h  layer_rename_action.cpp  layer_rename_action.h  spawn_tile_instance_action.cpp  spawn_tile_instance_action.h
ui/: main_window.glade  new_level.glade  tile_editor.glade
